corrected dark mode in body

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@
 html {
     scroll-behavior: smooth;
   }
+/* 
+  body {
+    @apply bg-white text-black;
+  }
+  
+  .dark body {
+    @apply bg-black text-white;
+  } */
+  
